cleanup personal setup files
* remove sbt files
* upgrade tmux